crates/ir/tests/ir/snapshots/main__ir__lower__resources__resource_inner_if_branch.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module resources__resource_inner_if_branch

type Handle = MkHandle#0(Int)
instance core/resource.Resource[Handle] { close=Resource$$Handle$$close }
extern java "krypton.runtime.KryptonIO" println(a8) -> Unit
import core/peek/peek as peek(e) -> e
import core/list/last as last(List[r3]) -> Option[r3]
import core/list/sort_by as sort_by(List[w5], (w5) -> l5) -> List[w5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], v1, (v1, t1) -> v1) -> v1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[z7]) -> List[z7]
import core/option/Some as Some(c) -> Option[c]
import core/result/Ok as Ok(e) -> Result[d, e]
import core/result/Err as Err(d) -> Result[d, e]
import core/list/Cons as Cons(f, List[f]) -> List[f]
declare println: (a8) -> Unit

fn main() -> Unit =
  let v0: Unit = call println("before")
  let_join v8(v6: Unit) =
    let v7: Unit = call println("after")
    v7
  in
  if true {
    let v1: ~Handle = construct Handle::MkHandle#0(1)
    let v2: Unit = call println("opened")
    let v3: Dict[core/resource.Resource, Handle] = get_dict core/resource.Resource[Handle]
    let v5: Unit = trait_call core/resource.Resource.close(v3, v1)
    let v4: Unit = set_var_null v1
    jump v8(v2)
  } else {
    jump v8(())
  }

fn Resource$$Handle$$close(v9: ~Handle) -> Unit =
  let v10: Unit = call println("closed")
  v10
